[gd_scene load_steps=7 format=2]

[ext_resource path="res://MiscRes/Themes/Terminal.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/menu/MenuScreen.gd" type="Script" id=2]
[ext_resource path="res://MiscRes/terminals.tres" type="DynamicFont" id=3]
[ext_resource path="res://MiscRes/MarathonLogo.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/Menu/control_option_component.tscn" type="PackedScene" id=5]

[sub_resource type="ButtonGroup" id=1]

[node name="Control" type="Control"]
margin_right = 511.0
margin_bottom = 256.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Bkg" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.5
margin_top = -128.0
margin_right = 256.5
margin_bottom = 128.0
color = Color( 0, 0, 0, 1 )

[node name="Red1" type="ColorRect" parent="Bkg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -255.0
margin_right = 256.0
margin_bottom = 20.0
color = Color( 0.285156, 0, 0, 1 )

[node name="Red2" type="ColorRect" parent="Bkg"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -255.0
margin_top = -16.0
margin_right = 256.0
color = Color( 0.286275, 0, 0, 1 )

[node name="Label" type="Label" parent="Bkg"]
margin_left = 9.0
margin_top = 3.0
margin_right = 233.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Opening Connection to ÃŸ.4.5-23 	 "

[node name="Label3" type="Label" parent="Bkg"]
margin_left = 10.0
margin_top = 240.0
margin_right = 248.0
margin_bottom = 254.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "CAS.qterm//CyberAcme Systems, Inc."

[node name="Label4" type="Label" parent="Bkg"]
margin_left = 340.0
margin_top = 240.0
margin_right = 508.0
margin_bottom = 254.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "<931.461.60231.14.vt920>"

[node name="Label2" type="Label" parent="Bkg"]
margin_left = 400.0
margin_top = 3.0
margin_right = 505.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "2207 08.25.2337"

[node name="Main" type="Tabs" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 41.0
margin_bottom = 22.0

[node name="Play" type="Button" parent="Main"]
margin_left = 40.0
margin_top = 47.0
margin_right = 138.0
margin_bottom = 61.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Start New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play2" type="Button" parent="Main"]
margin_left = 40.0
margin_top = 67.0
margin_right = 159.0
margin_bottom = 81.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Host Network Game"

[node name="Play3" type="Button" parent="Main"]
margin_left = 40.0
margin_top = 87.0
margin_right = 159.0
margin_bottom = 101.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.617188, 0, 0, 1 )
disabled = true
text = "Join Network Game"

[node name="Settings" type="Button" parent="Main"]
margin_left = 40.0
margin_top = 107.0
margin_right = 96.0
margin_bottom = 121.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Settings"

[node name="Quit" type="Button" parent="Main"]
margin_left = 40.0
margin_top = 127.0
margin_right = 68.0
margin_bottom = 141.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="Label5" type="Label" parent="Main"]
margin_left = 189.0
margin_top = 145.0
margin_right = 483.0
margin_bottom = 221.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "U.E.S.C. Marathon 
Public Access Terminal 59-e<34.567.19.298>"
align = 1

[node name="MarathonLogo" type="TextureRect" parent="Main"]
margin_left = 257.0
margin_top = -15.0
margin_right = 414.0
margin_bottom = 142.0
texture = ExtResource( 4 )
expand = true

[node name="TabContainer" type="TabContainer" parent="."]
visible = false
margin_top = 21.0
margin_right = 511.0
margin_bottom = 258.0
theme = ExtResource( 1 )

[node name="Graphics" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="SSAO" type="CheckBox" parent="TabContainer/Graphics"]
margin_left = 40.0
margin_top = 20.0
margin_right = 280.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0078125, 1, 0, 1 )
text = "SS A. Occlusion"

[node name="Screen Space Relfections" type="CheckBox" parent="TabContainer/Graphics"]
margin_left = 40.0
margin_top = 50.0
margin_right = 424.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0078125, 1, 0, 1 )
text = "SS Reflections"

[node name="MSAA Filter" type="CheckBox" parent="TabContainer/Graphics"]
margin_left = 40.0
margin_top = 80.0
margin_right = 424.0
margin_bottom = 111.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0078125, 1, 0, 1 )
text = "MSAA Filter:"

[node name="AnsFilter" type="CheckBox" parent="TabContainer/Graphics"]
margin_left = 40.0
margin_top = 110.0
margin_right = 424.0
margin_bottom = 141.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0078125, 1, 0, 1 )
text = "Ansiotropic filter: "

[node name="Video" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="Resolution" type="Label" parent="TabContainer/Video"]
margin_left = 30.0
margin_top = 29.0
margin_right = 100.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "Resolution"

[node name="value" type="MenuButton" parent="TabContainer/Video/Resolution"]
margin_left = 80.0
margin_right = 129.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
group = SubResource( 1 )
text = "Default"

[node name="Screen Space Relfections" type="CheckBox" parent="TabContainer/Video"]
margin_left = 30.0
margin_top = 59.0
margin_right = 120.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "Fullscreen"

[node name="Gamma Corection" type="Label" parent="TabContainer/Video"]
margin_left = 30.0
margin_top = 94.0
margin_right = 142.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "Gamma Correction"

[node name="value" type="HSlider" parent="TabContainer/Video/Gamma Corection"]
margin_left = 130.0
margin_right = 386.0
margin_bottom = 16.0

[node name="Brightness" type="Label" parent="TabContainer/Video"]
margin_left = 30.0
margin_top = 124.0
margin_right = 100.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "Brightness"

[node name="value" type="HSlider" parent="TabContainer/Video/Brightness"]
margin_left = 130.0
margin_right = 386.0
margin_bottom = 16.0

[node name="Controls" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="TabContainer" type="TabContainer" parent="TabContainer/Controls"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -168.5
margin_top = 21.0
margin_right = 168.5
margin_bottom = 62.0

[node name="Movement" type="Tabs" parent="TabContainer/Controls/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="move_left" parent="TabContainer/Controls/TabContainer/Movement" instance=ExtResource( 5 )]
margin_left = -47.0
margin_top = 48.0
margin_right = 210.0
margin_bottom = 68.0
Label_text = "Strafe Left"

[node name="move_right" parent="TabContainer/Controls/TabContainer/Movement" instance=ExtResource( 5 )]
margin_left = -47.0
margin_top = 28.0
margin_right = 210.0
margin_bottom = 48.0
Label_text = "Strafe right"

[node name="move_forwards" parent="TabContainer/Controls/TabContainer/Movement" instance=ExtResource( 5 )]
margin_left = -47.0
margin_top = 68.0
margin_right = 210.0
margin_bottom = 88.0
Label_text = "Move Forwards"

[node name="move_backwards" parent="TabContainer/Controls/TabContainer/Movement" instance=ExtResource( 5 )]
margin_left = -47.0
margin_top = 88.0
margin_right = 210.0
margin_bottom = 108.0
Label_text = "Move Backwards"

[node name="jump" parent="TabContainer/Controls/TabContainer/Movement" instance=ExtResource( 5 )]
margin_left = -47.0
margin_top = 108.0
margin_right = 210.0
margin_bottom = 128.0
Label_text = "Jump"

[node name="run" parent="TabContainer/Controls/TabContainer/Movement" instance=ExtResource( 5 )]
margin_left = -47.0
margin_top = 128.0
margin_right = 284.0
margin_bottom = 148.0
Label_text = "Run/Walk"

[node name="swim" parent="TabContainer/Controls/TabContainer/Movement" instance=ExtResource( 5 )]
margin_left = -47.0
margin_top = 8.0
margin_right = 210.0
margin_bottom = 28.0
Label_text = "Swim toggle"

[node name="Combat" type="Tabs" parent="TabContainer/Controls/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="second_fire" parent="TabContainer/Controls/TabContainer/Combat" instance=ExtResource( 5 )]
margin_left = -47.0
margin_top = 68.0
margin_right = 210.0
margin_bottom = 88.0
Label_text = "Secondary Fire"

[node name="first_fire" parent="TabContainer/Controls/TabContainer/Combat" instance=ExtResource( 5 )]
margin_left = -47.0
margin_top = 48.0
margin_right = 210.0
margin_bottom = 68.0
Label_text = "Primary fire"

[node name="next_gun" parent="TabContainer/Controls/TabContainer/Combat" instance=ExtResource( 5 )]
margin_left = -47.0
margin_top = 88.0
margin_right = 213.0
margin_bottom = 108.0
Label_text = "Next gun"

[node name="prev_gun" parent="TabContainer/Controls/TabContainer/Combat" instance=ExtResource( 5 )]
margin_left = -47.0
margin_top = 108.0
margin_right = 210.0
margin_bottom = 128.0
Label_text = "Previous gun"

[node name="Comm" type="Tabs" parent="TabContainer/Controls/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="ui_right" parent="TabContainer/Controls/TabContainer/Comm" instance=ExtResource( 5 )]
margin_left = -47.0
margin_top = 28.0
margin_right = 284.0
margin_bottom = 48.0
Label_text = "Chat"

[node name="ui_right2" parent="TabContainer/Controls/TabContainer/Comm" instance=ExtResource( 5 )]
margin_left = -47.0
margin_top = 48.0
margin_right = 210.0
margin_bottom = 68.0
Label_text = "Push-to-talk"

[node name="Misc" type="Tabs" parent="TabContainer/Controls/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Controls/TabContainer/Misc"]
margin_left = 43.0
margin_top = 28.0
margin_right = 300.0
margin_bottom = 96.0
__meta__ = {
"_edit_group_": true
}

[node name="vol_plus" parent="TabContainer/Controls/TabContainer/Misc/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 257.0
margin_bottom = 14.0
Label_text = "Voulme up"

[node name="vol_minus" parent="TabContainer/Controls/TabContainer/Misc/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 18.0
margin_right = 257.0
margin_bottom = 32.0
Label_text = "Volume down"

[node name="gun_center" parent="TabContainer/Controls/TabContainer/Misc/VBoxContainer" instance=ExtResource( 5 )]
margin_right = 257.0
margin_bottom = 50.0
Label_text = "Toggle gun position"

[node name="open_map" parent="TabContainer/Controls/TabContainer/Misc/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 54.0
margin_right = 257.0
margin_bottom = 68.0
Label_text = "Open Minimap"

[node name="Controls" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Done" type="Button" parent="Controls"]
margin_left = 298.0
margin_top = 219.0
margin_right = 326.0
margin_bottom = 233.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Done"

[node name="Cancel" type="Button" parent="Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 427.0
margin_top = 219.0
margin_right = 429.0
margin_bottom = 193.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Cancel"

[node name="Net_Host" type="Tabs" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 21.0

[node name="IP" type="Label" parent="Net_Host"]
margin_left = 20.0
margin_top = 70.0
margin_right = 216.0
margin_bottom = 84.0
text = "Current IP : 345.345.234.345"

[node name="IP2" type="Label" parent="Net_Host"]
margin_left = 20.0
margin_top = 30.0
margin_right = 216.0
margin_bottom = 44.0
text = "Gathering Network Players"

[node name="Aliens" type="CheckBox" parent="Net_Host"]
margin_left = 20.0
margin_top = 100.0
margin_right = 82.0
margin_bottom = 116.0
text = "Aliens"

[node name="PVP" type="CheckBox" parent="Net_Host"]
margin_left = 20.0
margin_top = 120.0
margin_right = 82.0
margin_bottom = 136.0
text = "Player vs Player"

[node name="PVP2" type="CheckBox" parent="Net_Host"]
margin_left = 20.0
margin_top = 140.0
margin_right = 152.0
margin_bottom = 156.0
text = "Infinite Ammo"

[node name="PVP3" type="CheckBox" parent="Net_Host"]
margin_left = 20.0
margin_top = 160.0
margin_right = 152.0
margin_bottom = 176.0
disabled = true
text = "Record Match"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Main/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/Play2" to="." method="_on_HostNet_pressed"]
[connection signal="pressed" from="Main/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Controls/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="visibility_changed" from="Net_Host/IP" to="." method="_on_IP_visibility_changed"]
[connection signal="visibility_changed" from="Net_Host/IP2" to="." method="_on_IP_visibility_changed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
